# DEF-W9-27_Deep-Seq2Seq-GNSS

./: .env.serve.example  ASSETS.md  Dockerfile.serve  README.md  docker-compose.serve.yml  pyproject.toml
artifacts/checkpoints/: model.pt
artifacts/reports/: eval.json
configs/: debug.toml  default.toml  paper.toml
docs/: CUDA_MIGRATION.md  OPERATIONS.md
papers/: 2510.19890.txt
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
scripts/: export_onnx.py
src/anima_deep_seq2seq_gnss/: __init__.py  api.py  config.py  data.py  evaluate.py  infer.py  preprocess.py  train.py
src/anima_deep_seq2seq_gnss/models/: __init__.py  detector.py  encoder.py  quantizer.py
tasks/: INDEX.md  PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0104.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0204.md  PRD-0205.md  PRD-0206.md  PRD-0301.md  PRD-0302.md  PRD-0401.md  PRD-0402.md  PRD-0501.md  PRD-0502.md  PRD-0701.md  PRD-0702.md
tests/: test_evaluation.py  test_generator.py  test_models.py  test_preprocess.py
